--- a/techio.yml
+++ b/techio.yml
@@ -1,4 +1,4 @@
-title : Swift by XorMode
+title : Swift by XorMod (with the best avatar ever)
 plan:
   - title: Swift on Tech.io
     statement: markdowns/welcome.md
