--- a/techio.yml
+++ b/techio.yml
@@ -1,9 +1,9 @@
-tile : Swift by XorMod (with the best avatar ever)
-plan:
+title : Swift by XorMod (with the best avatar ever)
+ plan:
   - title: Swift on Tech.io
-    statement: markdowns/welcome.md
+      statement: markdowns/welcome.md
 projects:
-  first-project:
+    first-project:
     root: /swift-template
     runner:
       name: swift
