--- a/techio.yml
+++ b/techio.yml
@@ -5,6 +5,4 @@ plan:
 projects:
   first-project:
     root: /swift-template
-    runner:
-      name: swift
-      version: 3.1.0
+    runner: microsoft/iis:nanoserver
